--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "ele": "eleventy",
     "server": "eleventy --serve",
-    "scss": "node-sass --watch scss -o css"
+    "scss-viejo": "node-sass --watch scss -o css",
+    "scss": "node-sass scss/estilo.scss css/estilo.css --watch"
   },
   "author": "",
   "license": "ISC",
